# demo-finos-ca

./: README.md
a2a/story_skills_agent/: .env.example  Dockerfile  README.md  pyproject.toml
a2a/story_skills_agent/deployment/: k8s.yaml
a2a/story_skills_agent/src/story_skills_agent/: adk_agent.py  agent.py  configuration.py  diagnostics_agent.py  diagnostics_instructions.py  instructions.py  orchestrator.py
a2a/story_skills_agent/src/story_skills_agent/skills/character-builder/: SKILL.md
a2a/story_skills_agent/src/story_skills_agent/skills/genre-guide/: SKILL.md
a2a/story_skills_agent/src/story_skills_agent/skills/story-structure/: SKILL.md
a2a/story_skills_agent/src/story_skills_agent/skills/troubleshooting-guide/: SKILL.md
